[project]
name = "coffeelog-backend"
version = "1.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "alembic>=1.16.2",
    "fastapi[standard]>=0.115.14",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
